--- a/README
+++ b/README
@@ -1,7 +1,7 @@
                              Locale-KeyedText
 ---------------------------------------------------------------------------
 
-by Darren Duncan <perl@DarrenDuncan.net>
+by Darren Duncan <darren@DarrenDuncan.net>
 
 PREFACE
 
