--- a/TODO
+++ b/TODO
@@ -4,8 +4,7 @@
 
 Following is a summary of things that still need doing.
 
-* Consider raising the version number to 2.x, considering the wide scale
-compatability breaks between the rewrite and previous stable releases.
+* Consider raising the version number to 2.x, considering various reasons.
 
 * Write the DIAGNOSTICS and other pending documentation in KeyedText.pm,
 and write the POD for en.pm, removing sections if not applicable.
@@ -16,8 +15,6 @@ include the same characters as variable markers in Template text strings.
 * Add support for Template files to be a format other than Pure Perl, such
 as plain vanilla tab delimited text files (2 columns: key + string), or
 YAML files, or XML files.
-
-* Add a new test suite.
 
 * No further updates are planned during the short term except in response
 to user requests.
