--- a/Changes
+++ b/Changes
@@ -21,6 +21,10 @@
     (such as it was) test suite that came with Locale::KeyedText up through
     release 1.060002 and was entirely purged with release 1.06_3.
 
+    * Increased the direct external dependency on Test::More to version
+    0.92, which is the version bundled with Perl 5.10.1; updated the test
+    suite to use done_testing(), that v0.88+ has, rather than plan().
+
     * Locale::KeyedText is now licensed under the terms of the GNU Lesser
     General Public License (LGPL) version 3 or later, rather than version
     2.1+ of the same license.  The text of the updated license is now in
