excise direct external dependency on 'Readonly' module

--- a/Changes
+++ b/Changes
@@ -20,7 +20,7 @@
     is also about bringing other aspects of modernity to this distribution.
 
     * This distribution has excised its direct external dependencies on the
-    modules "only" and "version".
+    modules "Readonly", "only" and "version".
 
     * Removed the Perl shebang line "#!perl" from every Perl file with one.
 
