--- a/TODO
+++ b/TODO
@@ -10,8 +10,18 @@ TRAIT THAT WAS LOST ALONG WITH Class-Std* DROP.
 * Update INTERFACE docs to be more like Set::Relation, eg each class gets
 an h1 and each method gets an h2.
 
-* Use a more appropriate test for whether a module is loaded; the method
-currently used warns as deprecated in more modern Perls (we suppressed it).
+* Revist how template modules are loaded or tested for already being
+loaded.  The current testing method involves treating the symbol table as a
+hash and newer Perls give a deprecation warning on that code, which uses
+"no strict 'refs';" and "no warnings 'deprecated';".  The current loading
+method uses 'eval "require $module_name;";' because it uses the bareword
+semantics of "require" so it converts :: to / in module names etc.  On one
+hand an ideal solution would be something simple that could be inlined so
+no CPAN module dependencies need to be added.  On the other hand, adding a
+new dependency on something like Module::Runtime or Class::Load may be
+justified even though other dependencies weren't, since it would involve
+robust functioning of a core feature and those candidates are mostly free
+of non-Core dependencies themselves.
 
 * Write the DIAGNOSTICS and other pending documentation in KeyedText.pm,
 and write the POD for en.pm, removing sections if not applicable.
